# meow-ios

./: .gitignore  CLAUDE.md  README.md  prod.env.example  project.yml
.github/workflows/: ci.yml
App/: Info.plist
App/Resources/en.lproj/: Localizable.strings
App/Resources/zh-Hans.lproj/: Localizable.strings
App/Sources/: AppModel.swift
App/Sources/Models/: ChinaDirectKeywords.swift  EditableRule.swift  ProxyGroupModel.swift
App/Sources/Services/: AppIPCBridge.swift  AssetSeeder.swift  BootstrapEngine.swift  DailyTrafficAccumulator.swift  GeoAssetService.swift  GeoAssetStager.swift  MeowAPI.swift  MihomoAPI.swift  MihomoAPITypes.swift  RulesYAMLEditor.swift  SubscriptionService.swift  VpnManager.swift
App/Sources/Views/: ClashYAMLTextView.swift  ConnectionsView.swift  ContentView.swift  DiagnosticsViewController.swift  GlassCard.swift  HomeView.swift  LogsView.swift  ProvidersView.swift  ProxyGroupsView.swift  RuleEditorSheet.swift  RulesEditorView.swift  RulesView.swift  SettingsView.swift  SubscriptionsView.swift  TrafficView.swift  UserDiagnosticsView.swift  YamlEditorView.swift
MeowCore/include/: meow_core.h  mihomo_core.h
MeowIntegrationTests/EngineIntegration/: EngineBootTests.swift
MeowIntegrationTests/ProtocolFixtures/: UDPProtocolTests.swift
MeowIntegrationTests/VPNLifecycle/: TunnelSettings.swift  TunnelSettingsLANExclusionTests.swift
MeowShared/: Package.swift
MeowShared/Sources/MeowIPC/: ProxyControlIPC.swift
MeowShared/Sources/MeowModels/: AppGroup.swift  EffectiveConfigWriter.swift  MinimalConfigBuilder.swift  Preferences.swift
MeowShared/Tests/MeowSharedTests/: EffectiveConfigWriterTests.swift  PreferencesTests.swift
MeowTests/API/: ConnectionsTests.swift  MeowAPITests.swift  RulesTests.swift
MeowTests/Models/: ChinaDirectKeywordsTests.swift  ProxyGroupModelTests.swift  RulesYAMLEditorTests.swift
MeowTests/Parsing/: SubscriptionParserTests.swift
MeowTests/Security/: KeychainStoreTests.swift
MeowTests/Support/: URLProtocolStub.swift
PacketTunnel/: Info.plist  PacketTunnel.entitlements
PacketTunnel/Sources/: MWAppGroup.m  MWPreferences.h  MWPreferences.m  MWTunnelEngine.h  MWTunnelEngine.m  MWTunnelSettings.h  MWTunnelSettings.m  PacketTunnelProvider.m
core/rust/geosite-mrs-builder/: Cargo.toml
core/rust/macos-utun-harness/: Cargo.toml  README.md
core/rust/macos-utun-harness/src/: main.rs  utun.rs
core/rust/meow-ios-ffi/: Cargo.toml
core/rust/meow-ios-ffi/src/: engine.rs  lib.rs  logging.rs  subscription.rs  tun2socks.rs
core/rust/meow-ios-ffi/tests/: stress_rss.rs
core/rust/mihomo-ios-ffi/: Cargo.toml  build.rs
core/rust/mihomo-ios-ffi/src/: diagnostics.rs  engine.rs  fake_ip.rs  fake_ip_dns.rs  lib.rs  logging.rs  rss.rs  subscription.rs  tun2socks.rs  xdg_home_dir_tests.rs
core/rust/mihomo-ios-ffi/tests/: stress_rss.rs
docs/: ACCESSIBILITY.md  INVESTIGATION-2026-05-16-stress-rss-netstack-smoltcp.md  INVESTIGATION-2026-05-18-tcp-direct-rule-disconnect.md  PRD.md  PROJECT_PLAN.md  TEST_STRATEGY.md  index.html
docs/adr/: ADR-005-geoip-download-via-in-process-proxy.md
fastlane/: Appfile
marketing/intro-video/: design.md  index.html
meow-ios.xcodeproj/: project.pbxproj
metadata/en-US/: description.txt  keywords.txt  release_notes.txt
metadata/testflight/: beta_app_description.txt
metadata/testflight/whats_new/: 2026051301.txt  2026051801.txt  2026051810.txt  2026051901.txt  2026052103.txt  2026060702.txt  2026061501.txt  2026061502.txt  2026061602.txt  2026061704.txt  2026061801.txt  2026061803.txt  2026061902.txt
metadata/testflight/zh-Hans/: beta_app_description.txt
metadata/testflight/zh-Hans/whats_new/: 2026051301.txt  2026051801.txt  2026051810.txt  2026051901.txt  2026052103.txt  2026060702.txt  2026061501.txt  2026061502.txt  2026061602.txt  2026061704.txt  2026061801.txt  2026061803.txt  2026061902.txt
metadata/zh-Hans/: description.txt  keywords.txt  release_notes.txt
scripts/: README.md  build-adhoc.sh  build-release.sh  build-rust.sh  capture-screenshots.sh  generate-stub-dsyms.py  upload-testflight.sh
