[package]
name = "macos-utun-harness"
version = "0.1.0"
edition = "2021"
publish = false
description = "Developer-only macOS end-to-end harness for mihomo-ios-ffi — wires a real utun device into the same C-ABI surface the iOS PacketTunnelProvider drives."

[[bin]]
name = "meow-utun"
path = "src/main.rs"

[lints.rust]
unsafe_code = "allow"

[lints.clippy]
all = { level = "warn", priority = -1 }
needless_return = "allow"

[dependencies]
mihomo-ios-ffi = { path = "../mihomo-ios-ffi" }
libc = "0.2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
ctrlc = "3"
