[package]
name = "meow-ios-ffi"
version = "0.1.0"
edition = "2021"
description = "meow-rs engine + tun2socks for meow-ios — C ABI, no Go, no JNI. TCP/UDP dispatch through local meow listeners."

[lib]
# `staticlib` is the iOS xcframework consumer; `rlib` exists so the
# `macos-utun-harness` sibling crate (a developer-only end-to-end test
# binary that runs the FFI against a real `utun` device on macOS) can
# depend on us as a normal Rust dependency instead of going through
# C-ABI relinking. Adds zero cost to the iOS build.
crate-type = ["staticlib", "rlib"]

[lints.rust]
unsafe_code = "allow"

[lints.clippy]
all = { level = "warn", priority = -1 }
needless_return = "allow"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt-multi-thread", "net", "io-util", "sync", "macros", "time", "signal"] }
tokio-util = { version = "0.7", features = ["rt"] }
parking_lot = "0.12"
futures = "0.3"
# Explicit pin — transitive through meow-tunnel, but engine.rs builds
# `DashMap<String, Arc<ProxyProvider>>` for ApiServer::new and tun2socks.rs
# uses the same NAT-key concrete type as meow-tunnel. Match upstream's 6.x.
dashmap = "6"

# Logging
tracing = "0.1"
# `fmt` powers the App Group file-log layer (file_log.rs); `env-filter` is the
# pre-existing broadcast/oslog filter surface.
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
# Off-hot-path, bounded, lossy file writer for the always-on debug ring. The
# worker thread keeps the wedge-prone tokio workers off disk I/O so a livelock
# never blocks on logging (see project_lwip_timer_livelock).
tracing-appender = "0.2"
log = "0.4"
oslog = { version = "0.2", default-features = false, features = ["logger"] }

# `rustls` is declared so `engine::start` can install the ring crypto
# provider once at process init for any HTTPS the meow engine itself
# opens (subscription fetch, HTTPS outbound, …). The tun2socks UDP/53 path
# delegates DNS parse/serialize to the local meow-dns listener, so this is
# the only direct rustls consumer.
rustls = { version = "0.23", default-features = false, features = ["ring", "logging", "std", "tls12"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# Low-level
libc = "0.2"
anyhow = "1"

# Subscription parsing (v2rayN URI list → Clash YAML)
base64 = "0.22"
url = "2"
urlencoding = "2"

# tun2socks
lwip = "0.3"

# Embedded meow-rs engine (formerly mihomo-rust, renamed upstream). Pinned
# to a release tag normally; bump deliberately rather than tracking main.
# Each crate is a workspace member of madeye/meow-rs.
#
# HEAD: f6ba61f (meow-rs 0.15.0) — meow-dns runs in normal/Mapping
# (redir-host) mode: the resolver returns real upstream IPs and keeps an
# IP → host reverse cache (decoupled from the DNS TTL via REVERSE_TTL_FLOOR,
# meow-rs#240) so `pre_handle_metadata` recovers the hostname for domain-rule
# matching. The FFI config parser pins `enhanced-mode: redir-host` (no
# fake-ip-range); fake-IP is no longer used. Bump from b2278de (0.14.0) also
# picks up #234 (v0.15.0), #235 (wildcard-glob), #236 (probe concurrency),
# #237 (MetaCube rules).
meow-common = { git = "https://github.com/madeye/meow-rs", rev = "f6ba61f8d9f3f295247b51e01a46ad175c347b3b" }
# `boring-tls` activates BoringSSL-backed TLS in meow-transport so ECH
# (RFC 9460 SVCB / HTTPS ECHConfigList) and uTLS fingerprinting work for
# proxy outbound. Without it, any proxy entry with `ech-opts:` set is
# rejected at `TlsLayer::new` with `TransportError::Config` and the
# fingerprint field falls back to a stub-warn. Cost: boring-sys vendors
# BoringSSL, adding ~several MB to the stripped extension binary —
# watch the 50 MB NE budget after a release archive.
meow-config = { git = "https://github.com/madeye/meow-rs", rev = "f6ba61f8d9f3f295247b51e01a46ad175c347b3b", features = ["boring-tls"] }
meow-dns = { git = "https://github.com/madeye/meow-rs", rev = "f6ba61f8d9f3f295247b51e01a46ad175c347b3b" }
meow-tunnel = { git = "https://github.com/madeye/meow-rs", rev = "f6ba61f8d9f3f295247b51e01a46ad175c347b3b" }
meow-listener = { git = "https://github.com/madeye/meow-rs", rev = "f6ba61f8d9f3f295247b51e01a46ad175c347b3b", default-features = false, features = ["listener-mixed"] }
meow-api = { git = "https://github.com/madeye/meow-rs", rev = "f6ba61f8d9f3f295247b51e01a46ad175c347b3b" }
meow-proxy = { git = "https://github.com/madeye/meow-rs", rev = "f6ba61f8d9f3f295247b51e01a46ad175c347b3b" }

[build-dependencies]
cbindgen = "0.28"

[dev-dependencies]
# `xdg_home_dir_tests` probes the env-var wire-up via meow-config's GeoIP
# load path. No FFI-side GeoIP / CN-range table is loaded at runtime any
# longer — meow's resolver owns the GEOIP rule path — but the test keeps
# `maxminddb` (dev-only, zero shipping impact) so it can also open the
# fixture MMDB directly and prove the env-derived path resolves correctly.
tempfile = "3"
maxminddb = "0.27"
# `test-util` enables `#[tokio::test(start_paused = true)]`, which gives
# the dial-watchdog regression tests virtual time. Without it the tests
# would either block on real wall-clock sleeps (slow CI) or shrink their
# budgets so far they'd flake under load. Dev-only — production builds
# don't pull `test-util` so the time skew never reaches a real device.
tokio = { version = "1", features = ["test-util", "macros", "rt", "rt-multi-thread", "sync", "time"] }

[profile.release]
# Shrink binary for the 50MB extension budget. meow-rs adds significant
# weight; LTO + size-optimized codegen keeps us within the NE resident-memory
# ceiling.
opt-level = "z"
lto = true
codegen-units = 1
strip = "symbols"
panic = "abort"

# Patched lwip: upstream 0.3.15's `Stream::poll_next` impls
# (TcpListenerImpl / NetStackImpl / UdpSocket) mutate shared state
# (queue/rx/waker) WITHOUT holding LWIP_MUTEX, while the lwIP callbacks
# (tcp_accept_cb / output / udp_recv_cb) mutate the same state under the
# lock. On the 2-worker runtime this races: a concurrent VecDeque realloc
# in TcpListenerImpl::queue corrupts Box<TcpStreamImpl> ownership and hands
# out a stream whose mpsc Receiver is freed -> SIGSEGV (use-after-free) in
# TcpStreamImpl::poll_read under sustained TCP-flow churn (~115 flows/s,
# crashes ~55s). The fork acquires LWIP_MUTEX at the top of each poll_next.
# Verified: 20k+ flows over 180s at full churn on 2 workers, no crash, RSS
# flat.
#
# rev 5adf5e24 adds two idle-blackout fixes on top (2026-06-06 incident:
# tunnel stops redirecting traffic after hours of idle):
#   1. NetStackImpl::poll_flush returned Poll::Pending without a waker on
#      pbuf_alloc failure, permanently deadlocking the single task that
#      drives both stack directions. Now drops the frame (IP is lossy).
#   2. TcpStreamImpl::drop leaked TX-half-closed pcbs in FIN_WAIT_1/2
#      forever (TF_RXCLOSED unset -> lwIP slowtmr never reaps them); now
#      tcp_close()s so the 20 s FIN_WAIT_2 timeout applies.
#
# Upstream all of this to https://github.com/ssrlive/lwip and drop the
# patch once a fixed release ships.
[patch.crates-io]
lwip = { git = "https://github.com/madeye/lwip", rev = "78566b68b453f079cca42860f037de47248ec96e" }
